# flagsynth

./: .gitignore  .pylintrc  README.md  pyproject.toml
flagsynth/: __init__.py  asymmetric_decomp.py  linalg.py  multiplexed_flag.py  ortho_synth.py  po_qsd.py  recursive_flag_decomp.py  sdm.py
notebooks/: demo.ipynb  new.ipynb  timing.ipynb
notebooks/.ipynb_checkpoints/: _parameter-optimal-QSD-Copy1-checkpoint.ipynb
rotoptsynth/: __init__.py  asym_decomp.py  asym_decomp_jax.py  asymmetric_decomp.py  diag_decomps.py  diag_decomps_jax.py  flag_decomp.py  full_decomp.py  linalg.py  multiplexed_flag.py  po_qsd.py  recursive_flag_decomp.py  rot_opt_qsd.py  utils.py  validation.py
tests/: conftest.py  pytest.ini  test_asym_decomp.py  test_asymmetric_decomp.py  test_diag_decomp.py  test_flag_decomp.py  test_full_decomp.py  test_linalg.py  test_multiplexed_flag.py  test_po_qsd.py  test_recursive_flag_decomp.py  test_rot_opt_qsd.py  test_sdm.py  test_utils.py
