# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flagsynth"
version = "0.1"
authors = [
  { name="Korbinian Kottmann" },
  { name="David Wierichs" },
  { name="Guillermo Alonso" },
  { name="Nathan Killoran" }
]
description = "Parameter-optimal unitary synthesis with flag decompositions."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pennylane",
    "jupyter",
    "jax",
    "pytest",
    "matplotlib",
    "tqdm",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["."]
